--- a/Some_projects/style.css
+++ b/Some_projects/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+
 .projects {
     height: 700px;
     width: 350px;
@@ -175,20 +181,20 @@
     font-weight: 600;
     font-size: 23px;
     color: rgb(89,17,75);
-    margin: 20px;
+    margin: 10px;
 }
 
 .loading{
     border: 8px solid #f3f3f3; 
-    border-top: 6px solid #3498db;
+    border-top: 8px solid #3498db;
     border-radius: 50%;
     margin-top: 20px;
     width: 50px;
     height: 50px;
-    animation: spin 2s linear infinite; /* Make it spin */
+    animation: loader 2s linear infinite; 
     margin: auto;
 }
- @keyframes spin {
+ @keyframes loader {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
