--- a/restaurant_site/style.css
+++ b/restaurant_site/style.css
@@ -68,9 +68,6 @@
     width: 100%;
     height: 100px;
 }
-.wcu-section{
-    background-color: #a4b7dedb;
-}
 .wcu-section-heading{
     font-family: "Roboto";
     font-weight: 700;
@@ -86,7 +83,6 @@
     background-color: white;
     text-align: center;
     border-style: solid;
-    width: 1px;
     color: #e5eaf4;
     border-radius: 16px;
 }
@@ -94,4 +90,20 @@
     height: 90px;
     width: 87px;
     background-size: cover;
+}
+.wcu-card-title{
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 22px;
+    color: #323f4b;
+}
+.wcu-card-description{
+    font-family: Roboto;
+    font-size: 16px;
+    color: #7b8794;
+}
+.offers{
+    color: #323f4b;
+    font-weight: 500;
+    font-style: italic;
 }
