--- a/restaurant_site/style.css
+++ b/restaurant_site/style.css
@@ -191,3 +191,30 @@
 .pay-section-discount{
     font-weight: 700;
 }
+.tc-section{
+    background-color: #d0b2001a;
+}
+.tc-section-image{
+    width: 270px;
+    margin-bottom: 20px;
+}
+.tc-section-button{
+    color: white;
+    background-color: #d0b200;
+    width: 130px;
+    height: 45px;
+    border-width: 0;
+    border-radius: 8px;
+    margin-right: 10px;
+}
+.tc-section-heading{
+    color: #183b57;
+    font-family: "Roboto";
+    font-size: 28px;
+    font-weight: 700;
+}
+.pay-section-description{
+    color: #5a7184;
+    font-family: "Roboto";
+    font-size: 18px;
+}
