correcting thanking section

--- a/restaurant_site/style.css
+++ b/restaurant_site/style.css
@@ -213,7 +213,7 @@
     font-size: 28px;
     font-weight: 700;
 }
-.pay-section-description{
+.tc-section-description{
     color: #5a7184;
     font-family: "Roboto";
     font-size: 18px;
