--- a/restaurant_site/style.css
+++ b/restaurant_site/style.css
@@ -23,7 +23,7 @@
     height: 70px;
 }
 .banner-section-bg-container{
-    background-image: url("https://img.freepik.com/premium-photo/food-item-background-wallpaper_492154-7058.jpg");
+    background-image: url("https://thumbor.forbes.com/thumbor/fit-in/900x510/https://www.forbes.com/health/wp-content/uploads/2022/01/foods_to_eat_to_lose_weight.jpeg");
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -35,7 +35,7 @@
     font-weight: 345;
 }
 .paragraph{
-    color: #f40909;
+    color: #f0f409;
     font-family: "Roboto";
     font-size: 38px;
     font-weight: 290;
@@ -207,4 +207,24 @@
     padding: 27px 18px 10px 22px;
     margin: 15px;
     border-radius: 40px;
+}
+.footer-section{
+    background-color: #0a283e;
+}
+.food-munch-logo{
+    height: 90px;
+    width: 90px;
+}
+.footer-section-mail{
+    color: #7b8794;
+    margin-top: 10px;
+    font-size: 29px;
+    font-family: Roboto;
+
+}
+.footer-section-address{
+    color: #a3a8b6;
+    margin-top: 10px;
+    font-size: 19px;
+    font-family: Roboto;
 }
