--- a/restaurant_site/style.css
+++ b/restaurant_site/style.css
@@ -44,7 +44,7 @@
     width: 130px;
     height: 45px;
     color: white;
-    background-color: #d0b200;
+    background-image: linear-gradient(#efcc04, #766402);
     border-width: 0px;
     border-radius: 8px;
     margin-right: 10px;
@@ -206,7 +206,7 @@
     background-color: #faf7e8;
     padding: 27px 18px 10px 22px;
     margin: 15px;
-    border-radius: 40px;
+    border-radius: 50px;
 }
 .footer-section{
     background-color: #0a283e;
